--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <title>Mogo</title>
 </head>
 <body>
-    <div class="header ">
+    <div class="header" id="header">
         <div class="container">
             <div class="header__inner">
-                <div class="header__logo"><a href="#">MoGo</a></div>
-                <nav class="nav">
-                    <a class="nav__link active" href="#">About</a>
-                    <a class="nav__link" href="#">Service</a>
-                    <a class="nav__link" href="#">Work</a>
-                    <a class="nav__link" href="#">Blog</a>
-                    <a class="nav__link" href="#">About</a>
+                <div class="header__logo"><a href="#" data-scroll="#intro">MoGo</a></div>
+                <nav class="nav" id="nav">
+                    <a class="nav__link" href="#" data-scroll="#about">About</a>
+                    <a class="nav__link" href="#" data-scroll="#services">Service</a>
+                    <a class="nav__link" href="#" data-scroll="#work">Work</a>
+                    <a class="nav__link" href="#" data-scroll="#blog">Blog</a>
+                    <a class="nav__link" href="#" data-scroll="#footer">Contact</a>
                     <a class="nav__link" href="#">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
@@ -29,16 +30,16 @@
                     </a>
                 </nav>
 
-                <!-- <button class="nav__toggle active" type="button">
+                <button class="nav__toggle active" id="nav__toggle" type="button">
                     <span class="nav__toggle--item"></span>
-                </button> -->
+                </button> 
             </div>
         </div>
     </div>
 
     <div class="page">
 
-    <div class="intro">
+    <div class="intro" id="intro">
         <div class="container">
             <div class="intro__inner">
                 <h2 class="intro__suptitle">Creative Template</h2>
@@ -72,7 +73,7 @@
         </div><!-- .slider -->
     </div>
 
-    <section class="section">
+    <section class="section" id="about">
         <div class="container">
             <div class="section__header">
                 <h3 class="section__suptitle">What we do</h3>
@@ -143,8 +144,8 @@
         </div>
     </div> <!-- .statistics -->
 
-
-    <section class="section">
+    <!--Services-->
+    <section class="section" id="services">
         <div class="container">
 
             <div class="section__header">
@@ -207,6 +208,7 @@
     </div><!--Cotnainer-->
     </section>
 
+    <!--weDO-->
     <section class="section">
         <div class="container">
             <div class="section__header">
@@ -227,12 +229,12 @@
                 </div>
                 <div class="wedo__item">
                     <div class="accordion">
-                        <div class="accordion__item active">
-                            <div class="accordion__header">
+                        <div class="accordion__item active" data-collapse="#wedo_1">
+                            <div class="accordion__header" >
                                 <img class="accordion__icon" src="img/weDo/wedo_icon1.png" alt="">
                                 <div class="accordion__title">Photography</div>
                             </div>
-                            <div class="accordion__content">
+                            <div class="accordion__content" id="wedo_1">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -241,12 +243,12 @@
                                     sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </div>
                         </div>
-                        <div class="accordion__item">
+                        <div class="accordion__item" data-collapse="#wedo_2">
                             <div class="accordion__header">
                                 <img class="accordion__icon" src="img/weDo/wedo_icon2.png" alt="">
                                 <div class="accordion__title">Creativity</div>
                             </div>
-                            <div class="accordion__content">
+                            <div class="accordion__content" id="wedo_2">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -255,12 +257,12 @@
                                     sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </div>
                         </div>
-                        <div class="accordion__item">
+                        <div class="accordion__item " data-collapse="#wedo_3">
                             <div class="accordion__header">
                                 <img class="accordion__icon" src="img/weDo/wedo_icon3.png" alt="">
                                 <div class="accordion__title">Web design</div>
                             </div>
-                            <div class="accordion__content">
+                            <div class="accordion__content" id="wedo_3">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -278,6 +280,7 @@
         </div>
     </section>
 
+    <!--testimonials-->
     <section class="section section--gray">
             <div class="container">
                 <div class="testimonials">
@@ -400,8 +403,8 @@
                 </div><!--logos-->
         </section>
 
-
-        <section class="section">
+<!--work-->
+        <section class="section" id="work">
             <div class="container">
                 <div class="section__header">
                     <h3 class="section__suptitle">What we do</h3>
@@ -483,12 +486,14 @@
                 </div>
         </div><!--works-->
         </section>
-
+        
+<!--testimonials 2-->
         <section class="section section--gray">
             <div class="container">
                 <div class="testimonials">
                     <a class="testimonials__btn testimonials__btn--prev" href="#">Prev</a>
                     <a class="testimonials__btn testimonials__btn--next" href="#">Next</a>
+
                     <div class="testimonials__item">
                         <img class="testimonials__photo" src="img/review/review_pic.png" alt="">
                         <div class="testimonials__text">
@@ -498,10 +503,11 @@
                         </div>
                         <div class="testimonials__author">John Doe</div>
                     </div>
+                    </div>
                 </div>
-            </div><!--container-->
         </section>
 
+<!--Clients-->
         <section class="section section--clients">
             <div class="container">
                 <div class="section__header">
@@ -558,7 +564,8 @@
             </div><!--container-->
         </section>
 
-        <section class="section">
+        <!--blog-->
+        <section class="section" id="blog">
             <div class="container">
                 <div class="section__header">
                     <h3 class="section__suptitle">Our stories</h3>
@@ -627,6 +634,7 @@
         </div><!--container-->
     </section>
 
+    <!--map-->
         <section class="section section--map">
             <div class="container">
                 <div class="map">
@@ -638,7 +646,8 @@
             </div>
         </section>
 
-        <footer class="footer">
+        <!--footer-->
+        <footer class="footer" id="footer">
             <div class="container">
                 <div class="footer__inner">
                     <div class="footer__col footer__col--first">
@@ -757,6 +766,13 @@
         </footer>
 
     </div><!-- Page -->
+
+    <script
+     src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+    </script>
+    
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 </html>
